# Practice_data_engineering

./: .gitignore  README.md  pyproject.toml
01Practice/: demo01_semi-structured_data.sql  demo02_window_functions.sql  demo03_unnest.sql  demo_data.json  run.sh  task01.md
01Practice/completed_practice/: downloader.py  nike_analysis.sql
02Practice/: tasks.md
02Practice/completed_practice/: solutions.sql
03Practice/: demo01_opt.sql  how_to_do_db_dump.md  run.sh  task01.md
03Practice/completed_practice/: task.sql
04Practice/: 01_pandas.py  01_polars.py  02_pandas.py  02_polars.py  README.md  requirements.txt  run.sh  task01.md
04Practice/completed_practice/: download_dataset.py  pandas_solution.py  polars_solution.py
05Practice/: 01_pandas.py  01_spark.py  README.md  requirements.txt  run.sh  task01.md
05Practice/completed_practice/: pyspark_solution.py
06Practice/: run.sh  task01.md
06Practice/completed_practice/: .env  solution.py  solution.sql
07Practice/: airflow-install.md  run.sh
07Practice/completed_task/: test_db.sql  verify_duckdb.py
07Practice/completed_task/airflow/: requirements.txt
07Practice/completed_task/airflow/.astro/: config.yaml
08Practice/: run.sh  task.md
08Practice/completed_task/: create_db.sql  verify_csv.py
08Practice/completed_task/airflow_polars_project/: docker-compose.override.yml  requirements.txt
09Practice/assets/: task.md
11_12Practice/: run.sh
13Practice/: run.sh
13Practice/completed_practice/dbt/: .user.yml  dbt_project.yml  profiles.yml
13Practice/completed_practice/dbt/models/: my_model.sql  (+1 more)
(+6 files in other folders)
